Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_func-std-lab-ea-hol-ms-548d-01.yml
+++ b/.github/workflows/main_func-std-lab-ea-hol-ms-548d-01.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'FuncStd' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '8.0.x' # set this to the dotnet version to use
 
 jobs:
@@ -38,9 +38,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_AF92B6192C8247AEB1477BD6F8234F8A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5D6C9612393042E18C71D6C1E815AD83 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9D0D44BA36384A2886F3894D5296BBD3 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9D580706ACD744808D8E6B091DE42C1B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_67AF303BE54941B1A038C39F8D1BDA68 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_ECCDC8587FAA4BD59F312592BEDD8CFA }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
